# inkscape-gtk

./: READE.md  README.md  main.py  pyproject.toml  toolbox.py
figures/: __init__.py  base.py  marker.py  utils.py
