[tool.poetry]
name = "tp1"
version = "0.1.0"
description = ""
authors = ["lautaro bringasq <lm.bringas98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pgi = "^0.0.11"
gobject = "^0.1.0"
PyGObject = "^3.36.1"
pycairo = "^1.19.1"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
